--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a href="https://www.youtube.com/watch?v=84a2VD68hJU">
                 <img
                   class="trailer-buttom-icon"
-                  src="/img/play.svg"
+                  src="img/play.svg"
                   alt="play"
                 />
                 <span class="trailer-buttom-text">Посмотреть трейлер</span>
