--- a/index.html
+++ b/index.html
@@ -124,21 +124,21 @@
         <!-- /.tabs -->
         <div class="tabs-content1">
           <div class="card">
-            <img src="/img/Ellipse 1.png" alt="Кэрри Кун" class="card-image" />
+            <img src="img/Ellipse 1.png" alt="Кэрри Кун" class="card-image" />
             <div class="card-text">
               <h3 class="name">Кэрри Кун</h3>
               <span class="en-name">Carrie Coon</span>
             </div>
           </div>
           <div class="card">
-            <img src="/img/2.png" alt="Билл Мюррей" class="card-image" />
+            <img src="img/2.png" alt="Билл Мюррей" class="card-image" />
             <div class="card-text">
               <h3 class="name">Билл Мюррей</h3>
               <span class="en-name">Bill Murray</span>
             </div>
           </div>
           <div class="card">
-            <img src="/img/3.png" alt="Пол Радд" class="card-image" />
+            <img src="img/3.png" alt="Пол Радд" class="card-image" />
             <div class="card-text">
               <h3 class="name">Пол Радд</h3>
               <span class="en-name">Paul Rudd</span>
@@ -146,7 +146,7 @@
           </div>
         
           <div class="card">
-            <img src="/img/4.png" alt="Энни Поттс" class="card-image" />
+            <img src="img/4.png" alt="Энни Поттс" class="card-image" />
             <div class="card-text">
               <h3 class="name">Энни Поттс</h3>
               <span class="en-name">Annie Potts</span>
@@ -155,28 +155,28 @@
         </div>
           <div class="tabs-content2">
           <div class="card">
-            <img src="/img/5.png" alt="МакКенна Грейс" class="card-image" />
+            <img src="img/5.png" alt="МакКенна Грейс" class="card-image" />
             <div class="card-text">
               <h3 class="name">МакКенна Грейс</h3>
               <span class="en-name">Mckenna Grace</span>
             </div>
           </div>
           <div class="card">
-            <img src="/img/6.png" alt="Дэн Эйкройд" class="card-image" />
+            <img src="img/6.png" alt="Дэн Эйкройд" class="card-image" />
             <div class="card-text">
               <h3 class="name">Дэн Эйкройд</h3>
               <span class="en-name">Dan Aykroyd</span>
             </div>
           </div>
           <div class="card">
-            <img src="/img/7.png" alt="Эрни Хадсон" class="card-image" />
+            <img src="img/7.png" alt="Эрни Хадсон" class="card-image" />
             <div class="card-text">
               <h3 class="name">Эрни Хадсон</h3>
               <span class="en-name">Ernie Hudson</span>
             </div>
           </div>
           <div class="card">
-            <img src="/img/8.png" alt="Финн Вулфард" class="card-image" />
+            <img src="img/8.png" alt="Финн Вулфард" class="card-image" />
             <div class="card-text">
               <h3 class="name">Финн Вулфард</h3>
               <span class="en-name">Finn Wolfhard</span>
