--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="film-wrapper">
           <div class="film-trailer">
             <img src="img/poster.jpg" alt="poster" class="poster" />
-
+            <div>
             <buttom class="trailer-buttom">
               <a href="https://www.youtube.com/watch?v=84a2VD68hJU">
                 <img
@@ -47,6 +47,7 @@
                 <span class="trailer-buttom-text">Посмотреть трейлер</span>
               </a>
             </buttom>
+            </div>
           </div>
           <!-- /.film-trailer -->
           <div class="film-text">
@@ -124,7 +125,7 @@
         <!-- /.tabs -->
         <div class="tabs-content1">
           <div class="card">
-            <img src="img/Ellipse 1.png" alt="Кэрри Кун" class="card-image" />
+            <img src="img/1.png" alt="Кэрри Кун" class="card-image" />
             <div class="card-text">
               <h3 class="name">Кэрри Кун</h3>
               <span class="en-name">Carrie Coon</span>
